--- a/app/views/backend/custom_fields/_form.html.haml
+++ b/app/views/backend/custom_fields/_form.html.haml
@@ -14,5 +14,5 @@
   =f.input :maximal_value
 
 =field_set(:choice_options) do
-  -nested_association :choices do
+  =f.nested_association :choices do
     =f.input :name
