--- a/app/views/backend/listings/_form.html.haml
+++ b/app/views/backend/listings/_form.html.haml
@@ -3,4 +3,4 @@
   =f.input :root_model, :source => :root_models
   =f.input :conditions, :field => :text
   =f.input :description, :field => :text
-  =render :partial => "nodes"
+  =render :partial => "nodes_form"
