--- a/app/views/backend/listings/_reflection.html.haml
+++ b/app/views/backend/listings/_reflection.html.haml
@@ -1,1 +1,1 @@
-=render(:partial=>"listings/node", :collection=>reflection.children.find(:all, :order=>:position))
+=render(:partial=>"backend/listings/node", :collection=>reflection.children.order(:position))
