--- a/app/views/backend/operations/_form.html.haml
+++ b/app/views/backend/operations/_form.html.haml
@@ -3,14 +3,14 @@
   -#=f.association :responsible, :source => :employees
   -#=f.association :nature
   -#=f.input :planned_on
-  =f.input :description
+  -#=f.input :description
 
 -#=field_set(:duration) do
   =f.input :hour_duration
   =f.input :min_duration
 
 -#=field_set(:products) do
-  -nested_association(:items) do
+  =f.nested_association(:items) do
     =f.input :direction
     =f.association :product
     =f.input :quantity
@@ -18,6 +18,6 @@
     =f.association :warehouse
 
 -#=field_set(:tools) do
-  -nested_association(:uses) do
+  =f.nested_association(:uses) do
     =f.association :tool
 
