--- a/app/views/backend/product_natures/_form.html.haml
+++ b/app/views/backend/product_natures/_form.html.haml
@@ -33,7 +33,7 @@
 
 
 -#field_set :stocks, :in => :stock_options do
-  -#nested_association(:stocks) do
+  -#f.nested_association(:stocks) do
     -#input :critic_quantity_min
     -#input :quantity_min
     -#input :quantity_max
