--- a/app/views/backend/incoming_deliveries/_form.html.haml
+++ b/app/views/backend/incoming_deliveries/_form.html.haml
@@ -8,5 +8,5 @@
   =f.input :planned_on
 
 =field_set :incoming_delivery_items do
-  =render :partial => "items"
+  =render :partial => "items_form"
 
