--- a/app/views/backend/journal_entries/_exchange_rate_form.html.haml
+++ b/app/views/backend/journal_entries/_exchange_rate_form.html.haml
@@ -7,13 +7,13 @@
 =toolbar do |t|
   -t.link :new, {:controller => :journal_entry_items, :printed_on => @journal_entry.printed_on, :journal_id => @journal.id}, :remote => true, "data-update" => "#items", "data-update-at" => :bottom, "data-type" => :html, :method => :get
 .active-list
-  %table.list{:style => "margin-bottom: 8px;"}
+  %table.list
     %thead
       %tr
-        %th=JournalEntryLine.human_attribute_name("name")
-        %th=JournalEntryLine.human_attribute_name("account")
-        %th{"colspan" => 2}=JournalEntryLine.human_attribute_name("debit")
-        %th{"colspan" => 2}=JournalEntryLine.human_attribute_name("credit")
+        %th=JournalEntryItem.human_attribute_name("name")
+        %th=JournalEntryItem.human_attribute_name("account")
+        %th{"colspan" => 2}=JournalEntryItem.human_attribute_name("debit")
+        %th{"colspan" => 2}=JournalEntryItem.human_attribute_name("credit")
         %th.act
     %tfoot
       %tr#total.total{"data-valid-if-equality-between" => "#entry-original-debit, #entry-original-credit"}
@@ -21,7 +21,7 @@
         %td#entry-original-debit.decimal{"colspan" => 2, "data-use" => "input.original-debit"}=@journal_entry.original_debit
         %td#entry-original-credit.decimal{"colspan" => 2, "data-use" => "input.original-credit"}=@journal_entry.original_credit
 
-      -if @financial_year and@journal.currency != @financial_year.currency
+      -if @financial_year and @journal.currency != @financial_year.currency
         %tr.subtotal{"data-valid-if-equality-between" => "#entry-debit, #entry-credit"}
           %th{"colspan" => 2}=tl(:total_in_currency, :currency => @financial_year.currency.to_currency.name)
           %td#entry-debit.decimal{"colspan" => 2, "data-use" => "td.debit"}=@journal_entry.debit
@@ -29,5 +29,5 @@
 
     %tbody#items.items
       -items = @journal_entry_items || @journal_entry.items
-      =render :partial => "journal_entry_items/row_form", :collection => items
-      =render :partial => "journal_entry_items/row_form", :object => @journal_entry.items.new if items.empty?
+      =render :partial => "backend/journal_entry_items/row_form", :collection => items
+      =render :partial => "backend/journal_entry_items/row_form", :object => @journal_entry.items.new if items.empty?
