--- a/app/views/backend/mandates/configure.html.haml
+++ b/app/views/backend/mandates/configure.html.haml
@@ -1,15 +1,15 @@
-=form_tag({:action=>:configure}, :class=>:flex) do
+=form_tag({:action => :configure}, :class => :flex) do
   .fields.flex
     %table.list
       %tr
         %th=tc(:column)
-        %th{:colspan=>2}=tc :filter
-        %th{:colspan=>2}=tc :new_value
+        %th{:colspan => 2}=tc :filter
+        %th{:colspan => 2}=tc :new_value
       -for column in [:family, :organization, :title]
-        %tr{:class=>cycle('odd', 'even')}
+        %tr{:class => cycle('odd', 'even')}
           %td=tc "column_#{column}"
           %td=select_tag     "columns[#{column}][filter]", options_for_select(@filters)
-          %td=text_field_tag "columns[#{column}][search]", nil, "data-autocompletion"=>url_for(:controller=>:interfacers, :action=>"autocomplete_for_mandate_#{column}")
+          %td=text_field_tag "columns[#{column}][search]", nil, "data-autocompletion" => url_for(:action => "autocomplete_for_#{column}")
           %td=check_box_tag  "columns[#{column}][update]"
           %td=text_field_tag "columns[#{column}][new_value]"
   .actions
