--- a/app/views/backend/operations/show.html.haml
+++ b/app/views/backend/operations/show.html.haml
@@ -2,16 +2,16 @@
   -t.edit @operation
 
 =attributes_list(@operation) do |l|
-  -l.attribute :name
-  -l.attribute :nature, :label=>:name
-  -l.attribute :responsible, :label=>:label
+  -#l.attribute :name
+  -l.attribute :nature
+  -#l.attribute :responsible, :label=>:label
   -l.attribute :target, :label=>:name
-  -l.attribute :planned_on
-  -l.attribute :moved_on
-  -l.attribute :tools_list
+  -#l.attribute :planned_on
+  -#l.attribute :moved_on
+  -#l.attribute :tools_list
 
-%h2=tc(:operation_items)
-=list(:items)
+-# %h2=tc(:operation_items)
+-# =list(:items)
 
-%h2=tc(:uses)
-=list(:uses)
+-# %h2=tc(:uses)
+-# =list(:uses)
