--- a/app/views/backend/outgoing_deliveries/_form.html.haml
+++ b/app/views/backend/outgoing_deliveries/_form.html.haml
@@ -9,4 +9,4 @@
   =f.association :transporter, :source => :transporters, :new => {:transporter => 1}
 
 =field_set :outgoing_delivery_items do
-  = render :partial => "items"
+  = render :partial => "items_form"
