first pass to fixes CRUD on product_natures

--- a/app/views/backend/product_varieties/_form.html.haml
+++ b/app/views/backend/product_varieties/_form.html.haml
@@ -3,4 +3,6 @@
   =f.input :name
   =f.input :code
   =f.input :description
-  =f.input :description
+  =f.input :automatic
+  =f.input :product_type
+  =f.input :depth
