--- a/app/views/backend/product_natures/show.html.haml
+++ b/app/views/backend/product_natures/show.html.haml
@@ -6,8 +6,8 @@
     =attributes_list(@product_nature) do |l|
       -l.attribute :name
       -l.attribute :number
-      -l.attribute :category, :url=>true
-      -l.attribute :unit, :label=>:label
+      -l.attribute :category, :url => true
+      -l.attribute :unit, :label => :label
       -l.attribute :active
       -l.attribute :to
       -# l.attribute :catalog_name
@@ -17,20 +17,20 @@
       -# l.attribute :stockable
 
   -b.tabbox do
-    -b.cell :prices do
+    -b.cell ProductNature.human_attribute_name(:prices) do
       =toolbar do |t|
-        -t.link(:new_sales_price, {:controller=>:prices, :action=>:new, :mode=>:sales, :product_id=>session[:product_id]}) if @product_nature.saleable?
-        -t.link(:new_purchase_price, {:controller=>:prices, :action=>:new, :mode=>:purchases, :product_id=>session[:product_id]}) if @product_nature.purchasable?
+        -t.link(:new_sales_price, {:controller => :product_nature_prices, :action => :new, :mode => :sales, :product_id => session[:product_id]}) if @product_nature.saleable?
+        -t.link(:new_purchase_price, {:controller => :product_nature_prices, :action => :new, :mode => :purchases, :product_id => session[:product_id]}) if @product_nature.purchasable?
       =list :prices
 
     -#b.cell :components do
       =toolbar do |t|
-        -t.link :new, :controller=>:product_components, :product_nature_id=>@product_nature.id
+        -t.link :new, :controller => :product_components, :product_nature_id => @product_nature.id
       =list :components
 
     -#b.cell :stocks do
       =toolbar do |t|
-        -t.link :new, :controller=>:stocks, :product_nature_id=>@product_nature.id
+        -t.link :new, :controller => :stocks, :product_nature_id => @product_nature.id
       =list(:stocks)
 
     -#b.cell :stock_moves do
