Adds pictures on animals#show

--- a/app/themes/tekyla/stylesheets/beehive.css.scss
+++ b/app/themes/tekyla/stylesheets/beehive.css.scss
@@ -34,10 +34,11 @@
 
 
       .cell-content {
-        padding: $cell-title-vertical-padding $cell-title-horizontal-padding;
+        padding: $cell-title-vertical-padding $cell-title-vertical-padding; /*$cell-title-horizontal-padding;*/
         border: $cell-border;
         border-top: none;
         background: #FFFFFF;
+        @include clearfix;
       }
     }
 
