--- a/app/themes/tekyla/stylesheets/main.css.scss
+++ b/app/themes/tekyla/stylesheets/main.css.scss
@@ -126,6 +126,16 @@ ul.side-menu {
   }
 }*/
 
+.picture {
+  background: white;
+  border: 1px solid #DDDDDD;
+  box-shadow: 0 0 7px rgba(0, 0, 0, 0.2);
+  @include float(left);
+  @include margin-right($default-gap);
+  padding: 7px;
+}
+
+
 .attributes-list {
   @include column-count(3);
   @include column-gap(2em);
