--- a/app/views/backend/animals/show.html.haml
+++ b/app/views/backend/animals/show.html.haml
@@ -1,28 +1,25 @@
 =toolbar do |t|
   -t.edit @animal
-  -t.print_product @animal
+  -t.print_animal @animal
   -t.destroy(@animal, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @animal.destroyable?
 
 =beehive do |b|
   -b.cell :details do
-
+    -if @animal.picture.exists?
+      .picture=image_tag(@animal.picture.url(:identity))
+  
     =attributes_list(@animal) do |l| # liste des champs à afficher
       -l.attribute :name
       -l.attribute :variety, :url => true
-      -l.attribute :group, :url => true # on affiche l'attribut name de l'entité ProductGroup associé par l'attribut group de l'entité courante Product avec un lien vers ce groupe
+      -#l.attribute :group, :url => true # on affiche l'attribut name de l'entité ProductGroup associé par l'attribut group de l'entité courante Product avec un lien vers ce groupe
       -l.attribute :sex
       -l.attribute :mother, :url => true
+      -l.attribute :father, :url => true
       -l.attribute :identification_number
       -l.attribute :description
-    -if @animal.picture.exists?
-      =image_tag(@animal.picture.url(:thumb))
 
   -b.tabbox do
 
     -b.cell(:childrens) do
       =list(:children)
-
-    -b.cell(:picture) do
-      -if @animal.picture.exists?
-        =image_tag(@animal.picture.url(:original))
 
