Changes border color in fieldset-fields

--- a/app/themes/tekyla/stylesheets/main.css.scss
+++ b/app/themes/tekyla/stylesheets/main.css.scss
@@ -358,7 +358,8 @@ ul.side-menu {
     resize: vertical;
   }
   .fieldset-fields {
-    border-top: $fieldset-border;
+    //border-top: $fieldset-border;
+    border-top: 2px solid $active-color;
     margin-top: $vertical-gap;
     padding-top: $vertical-gap;
   }
